--- a/reward-model.ipynb
+++ b/reward-model.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "afe86021",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!pip install torch transformers peft accelerate datasets tqdm scikit-learn\n"
@@ -18,11 +14,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b9017233",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -39,11 +31,18 @@
     "\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
-    "DATA_DIR = \"lmsys-chatbot-arena\"  # based on your screenshot\n",
+    "notebook_dir = os.getcwd()\n",
+    "#print(f\"Current working directory: {notebook_dir}\")\n",
+    "DATA_DIR = os.path.join(notebook_dir, \"data\")\n",
+    "\n",
+    "train = pd.read_csv(os.path.join(DATA_DIR, \"train.csv\"))\n",
+    "test = pd.read_csv(os.path.join(DATA_DIR, \"test.csv\"))\n",
+    "sample = pd.read_csv(os.path.join(DATA_DIR, \"sample_submission.csv\"))\n",
+    "\n",
     "TRAIN_CSV = os.path.join(DATA_DIR, \"train.csv\")\n",
     "TEST_CSV  = os.path.join(DATA_DIR, \"test.csv\")\n",
     "\n",
-    "BASE_MODEL_NAME = \"roberta-large\"   # can downgrade to \"roberta-base\" if VRAM explodes\n",
+    "BASE_MODEL_NAME = \"roberta-base\"   # can downgrade to \"roberta-base\" if VRAM explodes\n",
     "MAX_LEN = 768                       # keep this reasonable for your GPU\n",
     "BATCH_SIZE = 2                      # we use grad accumulation instead of big batch\n",
     "GRAD_ACCUM_STEPS = 8                # effective batch_size ~= 16\n",
@@ -64,11 +63,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9c81176b",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(TRAIN_CSV)\n",
@@ -98,11 +93,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "34a15403",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class PairwisePrefDataset(Dataset):\n",
@@ -144,11 +135,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bef49d99",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoModel\n",
@@ -195,11 +182,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ee8e7101",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def pref_loss(scores_a, scores_b, labels, margin=0.5, tie_band=0.2):\n",
@@ -238,11 +221,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7d31c9b7",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gkf = GroupKFold(n_splits=N_FOLDS)\n",
@@ -363,11 +342,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4fbde4dd",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.optimize as opt\n",
@@ -428,11 +403,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3ede6835",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
