--- a/combination/combining logits.ipynb
+++ b/combination/combining logits.ipynb
@@ -1,6 +1,4 @@
-"""
-
-What this does:
+"""What this does:
 - Loads train.csv (labels + prompt for GroupKFold) and test.csv
 - Loads per-model OOF train probs and test probs (any subset present)
   Expected columns in each predictions file: id, pA, pB, pTie  (probabilities)
@@ -16,8 +14,7 @@ What this does:
     runs/<tag>/cv_report.json
     runs/<tag>/blend_config.json
 - Includes symmetry unit-tests (swap A/B) and tie calibration checks
-- Gracefully degrades if some model files are missing
-"""
+- Gracefully degrades if some model files are missing"""
 
 import os
 import sys
