--- a/combination.ipynb
+++ b/combination.ipynb
@@ -73,80 +73,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbf7ce03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CONFIG = {\n",
-    "    # Official data\n",
-    "    \"train_csv\": \"./data/train.csv\",\n",
-    "    \"test_csv\":  \"./data/test.csv\",\n",
-    "\n",
-    "    # Candidate model artifacts (list as many as you want; missing ones are ignored)\n",
-    "    \"model_specs\": [\n",
-    "        # Reward teacher (your RoBERTa + LoRA “teacher_logits_*” from reward-model.ipynb)\n",
-    "        {\n",
-    "            \"name\": \"teacher2_reward\",\n",
-    "            # try common locations — whichever exists will be loaded\n",
-    "            \"train_path\": \"./combination/teacher_logits_train.csv\",\n",
-    "            \"test_path\":  \"./combination/teacher_logits_test.csv\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"name\": \"teacher2_reward_alt\",\n",
-    "            \"train_path\": \"./reward_teacher_outputs/teacher_logits_train.csv\",\n",
-    "            \"test_path\":  \"./reward_teacher_outputs/teacher_logits_test.csv\",\n",
-    "        },\n",
-    "\n",
-    "        # (Optional) another teacher, e.g., cross-encoder\n",
-    "        {\n",
-    "            \"name\": \"teacher1_cross_encoder\",\n",
-    "            \"train_path\": \"./combination/teacher1_oof_probs.csv\",\n",
-    "            \"test_path\":  \"./combination/teacher1_test_probs.csv\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"name\": \"teacher1_cross_encoder_alt\",\n",
-    "            \"train_path\": \"./teacher1_outputs/teacher1_oof_probs.csv\",\n",
-    "            \"test_path\":  \"./teacher1_outputs/teacher1_test_probs.csv\",\n",
-    "        },\n",
-    "\n",
-    "        # (Optional) baseline TF-IDF/heuristics if you saved them\n",
-    "        {\n",
-    "            \"name\": \"baseline_tfidf\",\n",
-    "            \"train_path\": \"./combination/tfidf_oof_probs.csv\",\n",
-    "            \"test_path\":  \"./combination/tfidf_test_probs.csv\",\n",
-    "        },\n",
-    "\n",
-    "        # (Optional) student model (later)\n",
-    "        {\n",
-    "            \"name\": \"student_distilled\",\n",
-    "            \"train_path\": \"./combination/student_oof_probs.csv\",\n",
-    "            \"test_path\":  \"./combination/student_test_probs.csv\",\n",
-    "        },\n",
-    "    ],\n",
-    "\n",
-    "    # Where to write ensemble outputs\n",
-    "    \"runs_dir\": \"./combination/runs\",\n",
-    "\n",
-    "    # CV + ensemble knobs (unchanged from before)\n",
-    "    \"n_folds\": 5,\n",
-    "    \"random_state\": 42,\n",
-    "    \"use_weighted_logit_blend\": True,\n",
-    "    \"use_stacking_lr\": True,\n",
-    "    \"weight_init\": \"equal\",\n",
-    "    \"weight_opt_max_iter\": 800,\n",
-    "    \"weight_opt_tolerance\": 1e-8,\n",
-    "    \"stack_use_engineered_features\": True,\n",
-    "    \"stack_C\": 2.0,\n",
-    "    \"stack_max_iter\": 2000,\n",
-    "    \"stack_solver\": \"lbfgs\",\n",
-    "    \"use_length_features\": True,  # uses columns present in ./data/train.csv & test.csv\n",
-    "    \"epsilon\": 1e-9,\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "832eab56",
    "metadata": {},
@@ -163,32 +89,22 @@
    "source": [
     "CONFIG = {\n",
     "    # Required: path to the official data (for labels/prompts and IDs)\n",
-    "    \"train_csv\": \"./dataset/train.csv\",    # <-- update if different\n",
-    "    \"test_csv\":  \"./dataset/test.csv\",     # <-- update if different\n",
+    "    \"train_csv\": \"./data/train.csv\",    # <-- update if different\n",
+    "    \"test_csv\":  \"./data/test.csv\",     # <-- update if different\n",
     "\n",
     "    # Model artifacts to blend (add/remove freely).\n",
     "    # Each item can point to train OOF probs and test probs. If missing, it's skipped.\n",
     "    # File format (CSV): id,pA,pB,pTie (probabilities for A/B/Tie)\n",
     "    \"model_specs\": [\n",
     "        {\n",
-    "            \"name\": \"teacher2_reward\",  # your reward scorer (already calibrated)\n",
+    "            \"name\": \"teacher2_reward\",  # LoRA + RoBERTa reward model\n",
     "            \"train_path\": \"./reward_teacher_outputs/teacher_logits_train.csv\",\n",
     "            \"test_path\":  \"./reward_teacher_outputs/teacher_logits_test.csv\",\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"teacher1_cross_encoder\",  # if you have it; else will be skipped\n",
-    "            \"train_path\": \"./teacher1_outputs/teacher1_oof_probs.csv\",\n",
-    "            \"test_path\":  \"./teacher1_outputs/teacher1_test_probs.csv\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"name\": \"baseline_tfidf\",  # optional baseline (weak but adds diversity)\n",
-    "            \"train_path\": \"./baseline_outputs/tfidf_oof_probs.csv\",\n",
-    "            \"test_path\":  \"./baseline_outputs/tfidf_test_probs.csv\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"name\": \"student_distilled\",  # future student model; optional\n",
-    "            \"train_path\": \"./student_outputs/student_oof_probs.csv\",\n",
-    "            \"test_path\":  \"./student_outputs/student_test_probs.csv\",\n",
+    "            \"name\": \"deberta_head_only\",  # deberta submission model\n",
+    "            \"train_path\": \"./data/train.csv\",\n",
+    "            \"test_path\":  \"./submission_deberta_head_only.csv\",\n",
     "        },\n",
     "    ],\n",
     "\n",
@@ -1139,4 +1055,5 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
 
