Improved deberta model accuracy

--- a/deberta-base.ipynb
+++ b/deberta-base.ipynb
@@ -2074,6 +2074,345 @@
     "print(df.describe())\n",
     "print(df.sum(axis=1).head())  # each row should ≈ 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef5b4a81",
+   "metadata": {},
+   "source": [
+    "improving accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d0304f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: mps\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/transformers/convert_slow_tokenizer.py:564: UserWarning: The sentencepiece tokenizer that you are converting to a fast tokenizer uses the byte fallback option which is not implemented in the fast tokenizers. In practice this means that the fast version of the tokenizer can produce unknown tokens whereas the sentencepiece version would have converted these unknown tokens into a sequence of byte tokens matching the original piece of text.\n",
+      "  warnings.warn(\n",
+      "Some weights of DebertaV2ForSequenceClassification were not initialized from the model checkpoint at microsoft/deberta-v3-small and are newly initialized: ['classifier.bias', 'classifier.weight', 'pooler.dense.bias', 'pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "/var/folders/vn/dg_0p_1j32g86zlgk7l_0wlw0000gn/T/ipykernel_73194/121670692.py:177: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "  trainer = Trainer(\n",
+      "The tokenizer has new PAD/BOS/EOS tokens that differ from the model config and generation config. The model config and generation config were aligned accordingly, being updated with the tokenizer's values. Updated tokens: {'eos_token_id': 2, 'bos_token_id': 1}.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TrainingArguments initialized with: ['output_dir', 'eval_strategy', 'save_strategy', 'learning_rate', 'per_device_train_batch_size', 'per_device_eval_batch_size', 'gradient_accumulation_steps', 'num_train_epochs', 'weight_decay', 'warmup_ratio', 'lr_scheduler_type', 'logging_steps', 'report_to', 'load_best_model_at_end', 'metric_for_best_model', 'greater_is_better', 'fp16', 'bf16', 'dataloader_pin_memory']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='9702' max='9702' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [9702/9702 5:00:15, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1.087500</td>\n",
+       "      <td>1.077980</td>\n",
+       "      <td>0.393528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1.078300</td>\n",
+       "      <td>1.069061</td>\n",
+       "      <td>0.426061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1.068800</td>\n",
+       "      <td>1.067652</td>\n",
+       "      <td>0.433716</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: submission_deberta_head_improved.csv\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ===========================================\n",
+    "# 🚀 DeBERTa v3 Small - MPS-optimized fine-tuning (Improved)\n",
+    "# ===========================================\n",
+    "\n",
+    "import os, gc, random, numpy as np, pandas as pd, torch\n",
+    "from torch.utils.data import Dataset\n",
+    "from transformers import (\n",
+    "    AutoTokenizer,\n",
+    "    AutoModelForSequenceClassification,\n",
+    "    Trainer,\n",
+    "    TrainingArguments,\n",
+    "    DataCollatorWithPadding,\n",
+    ")\n",
+    "import evaluate\n",
+    "from inspect import signature\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# ⚙️ MPS configuration\n",
+    "# -------------------------------------------------------\n",
+    "os.environ.setdefault(\"PYTORCH_MPS_HIGH_WATERMARK_RATIO\", \"0.0\")  # remove soft memory cap\n",
+    "\n",
+    "DEVICE = \"mps\" if torch.backends.mps.is_available() else (\n",
+    "    \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    ")\n",
+    "print(f\"Using device: {DEVICE}\")\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 🔧 Config (tuned for higher accuracy)\n",
+    "# -------------------------------------------------------\n",
+    "MODEL_NAME = \"microsoft/deberta-v3-small\"\n",
+    "MAX_LEN = 384\n",
+    "#LR = 2e-5\n",
+    "LR = 1.5e-5          # slightly lower, improves stability\n",
+    "GRAD_ACCUM = 16      # smoother updates on MPS\n",
+    "EPOCHS = 3                  # was 1 → better convergence\n",
+    "BSZ = 2                     # small batch for MPS safety\n",
+    "#GRAD_ACCUM = 2              # effective batch = 4\n",
+    "OUTPUT_DIR = \"deberta_mps_head\"\n",
+    "SEED = 42\n",
+    "\n",
+    "random.seed(SEED)\n",
+    "np.random.seed(SEED)\n",
+    "torch.manual_seed(SEED)\n",
+    "if DEVICE == \"mps\":\n",
+    "    torch.mps.manual_seed(SEED)\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 📂 Load data\n",
+    "# -------------------------------------------------------\n",
+    "train = pd.read_csv(\"data/train.csv\")\n",
+    "test = pd.read_csv(\"data/test.csv\")\n",
+    "\n",
+    "# Convert to numeric labels\n",
+    "label_map = {\"A\": 0, \"B\": 1, \"Tie\": 2}\n",
+    "train[\"label\"] = (\n",
+    "    train[[\"winner_model_a\", \"winner_model_b\", \"winner_tie\"]]\n",
+    "    .astype(int)\n",
+    "    .idxmax(axis=1)\n",
+    "    .map({\"winner_model_a\": \"A\", \"winner_model_b\": \"B\", \"winner_tie\": \"Tie\"})\n",
+    "    .map(label_map)\n",
+    ")\n",
+    "\n",
+    "# Stratified train/validation split\n",
+    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.1, random_state=SEED)\n",
+    "trn_idx, val_idx = next(sss.split(train, train[\"label\"]))\n",
+    "trn_df = train.iloc[trn_idx].reset_index(drop=True)\n",
+    "val_df = train.iloc[val_idx].reset_index(drop=True)\n",
+    "\n",
+    "# Optional: simple symmetric augmentation (small boost)\n",
+    "swapped = trn_df.copy()\n",
+    "swapped[[\"response_a\", \"response_b\"]] = swapped[[\"response_b\", \"response_a\"]]\n",
+    "swapped[\"label\"] = swapped[\"label\"].map({0: 1, 1: 0, 2: 2})\n",
+    "train_aug = pd.concat([trn_df, swapped]).reset_index(drop=True)\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 🧾 Tokenizer\n",
+    "# -------------------------------------------------------\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, local_files_only=True)\n",
+    "SEP = tokenizer.sep_token or \"[SEP]\"\n",
+    "\n",
+    "def pack_row(prompt, ra, rb):\n",
+    "    return f\"{prompt} {SEP} {ra} {SEP} {rb}\"\n",
+    "\n",
+    "class PairDataset(Dataset):\n",
+    "    def __init__(self, df, tok, max_len):\n",
+    "        self.df, self.tok, self.max_len = df, tok, max_len\n",
+    "    def __len__(self): return len(self.df)\n",
+    "    def __getitem__(self, i):\n",
+    "        r = self.df.iloc[i]\n",
+    "        text = pack_row(r[\"prompt\"], r[\"response_a\"], r[\"response_b\"])\n",
+    "        enc = self.tok(text, truncation=True, max_length=self.max_len)\n",
+    "        item = {k: torch.tensor(v) for k, v in enc.items()}\n",
+    "        if \"label\" in r:\n",
+    "            item[\"labels\"] = torch.tensor(int(r[\"label\"]))\n",
+    "        return item\n",
+    "\n",
+    "train_ds = PairDataset(train_aug, tokenizer, MAX_LEN)\n",
+    "valid_ds = PairDataset(val_df, tokenizer, MAX_LEN)\n",
+    "test_ds  = PairDataset(test.assign(label=0), tokenizer, MAX_LEN)\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 🧩 Model setup (MPS-safe)\n",
+    "# -------------------------------------------------------\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "    MODEL_NAME,\n",
+    "    local_files_only=True,\n",
+    "    num_labels=3,\n",
+    ")\n",
+    "\n",
+    "# ❌ Disable gradient checkpointing (causes backward graph error on MPS)\n",
+    "if hasattr(model, \"gradient_checkpointing_disable\"):\n",
+    "    model.gradient_checkpointing_disable()\n",
+    "\n",
+    "# ✅ Unfreeze only the last encoder layer\n",
+    "if hasattr(model, \"deberta\"):\n",
+    "    for p in model.deberta.parameters():\n",
+    "        p.requires_grad = False\n",
+    "    for p in model.deberta.encoder.layer[-1:].parameters():\n",
+    "        p.requires_grad = True\n",
+    "else:\n",
+    "    backbone = getattr(model, \"base_model\", None)\n",
+    "    if backbone is not None:\n",
+    "        for p in backbone.parameters():\n",
+    "            p.requires_grad = False\n",
+    "\n",
+    "# ✅ Ensure cache disabled for cleaner training\n",
+    "if hasattr(model.config, \"use_cache\"):\n",
+    "    model.config.use_cache = False\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 📊 Metrics\n",
+    "# -------------------------------------------------------\n",
+    "metric = evaluate.load(\"accuracy\")\n",
+    "def compute_metrics(eval_pred):\n",
+    "    logits, labels = eval_pred\n",
+    "    preds = np.argmax(logits, axis=-1)\n",
+    "    return {\"accuracy\": np.mean(preds == labels)}\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 🧮 Training Arguments\n",
+    "# -------------------------------------------------------\n",
+    "desired_kwargs = dict(\n",
+    "    output_dir=OUTPUT_DIR,\n",
+    "    eval_strategy=\"epoch\",\n",
+    "    save_strategy=\"epoch\",\n",
+    "    learning_rate=LR,\n",
+    "    per_device_train_batch_size=BSZ,\n",
+    "    per_device_eval_batch_size=BSZ,\n",
+    "    gradient_accumulation_steps=GRAD_ACCUM,\n",
+    "    num_train_epochs=EPOCHS,\n",
+    "    weight_decay=0.01,\n",
+    "    warmup_ratio=0.1,                      # longer warmup\n",
+    "    lr_scheduler_type=\"cosine\",            # smoother decay\n",
+    "    logging_steps=50,\n",
+    "    report_to=\"none\",\n",
+    "    load_best_model_at_end=True,\n",
+    "    metric_for_best_model=\"eval_loss\",\n",
+    "    greater_is_better=False,\n",
+    "    fp16=False,\n",
+    "    bf16=False,\n",
+    "    dataloader_pin_memory=False,\n",
+    ")\n",
+    "\n",
+    "sig = signature(TrainingArguments.__init__)\n",
+    "supported = set(sig.parameters.keys())\n",
+    "if \"eval_strategy\" in desired_kwargs and \"eval_strategy\" not in supported and \"evaluation_strategy\" in supported:\n",
+    "    desired_kwargs[\"evaluation_strategy\"] = desired_kwargs.pop(\"eval_strategy\")\n",
+    "filtered_kwargs = {k: v for k, v in desired_kwargs.items() if k in supported}\n",
+    "args = TrainingArguments(**filtered_kwargs)\n",
+    "print(\"TrainingArguments initialized with:\", list(filtered_kwargs.keys()))\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 🚀 Trainer\n",
+    "# -------------------------------------------------------\n",
+    "collator = DataCollatorWithPadding(tokenizer)\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=args,\n",
+    "    train_dataset=train_ds,\n",
+    "    eval_dataset=valid_ds,\n",
+    "    tokenizer=tokenizer,\n",
+    "    data_collator=collator,\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 🏋️ Train\n",
+    "# -------------------------------------------------------\n",
+    "trainer.train()\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 🔮 Predict and Save Submission\n",
+    "# -------------------------------------------------------\n",
+    "import torch.nn.functional as F\n",
+    "val_logits = trainer.predict(valid_ds).predictions\n",
+    "test_logits = trainer.predict(test_ds).predictions\n",
+    "\n",
+    "val_probs = F.softmax(torch.tensor(val_logits), dim=1).numpy()\n",
+    "test_probs = F.softmax(torch.tensor(test_logits), dim=1).numpy()\n",
+    "\n",
+    "sub = pd.DataFrame({\n",
+    "    \"id\": test[\"id\"],\n",
+    "    \"winner_model_a\": test_probs[:,0],\n",
+    "    \"winner_model_b\": test_probs[:,1],\n",
+    "    \"winner_tie\":     test_probs[:,2],\n",
+    "})\n",
+    "cols = [\"winner_model_a\",\"winner_model_b\",\"winner_tie\"]\n",
+    "sub[cols] = sub[cols].div(sub[cols].sum(axis=1), axis=0)\n",
+    "sub.to_csv(\"submission_deberta_head_improved.csv\", index=False)\n",
+    "print(\"Saved:\", \"submission_deberta_head_improved.csv\")\n",
+    "\n",
+    "# -------------------------------------------------------\n",
+    "# 🧹 Cleanup\n",
+    "# -------------------------------------------------------\n",
+    "del model; gc.collect()\n",
+    "if DEVICE == \"mps\":\n",
+    "    torch.mps.empty_cache()\n",
+    "print(\"Done!\")"
+   ]
   }
  ],
  "metadata": {
