--- a/combination.ipynb
+++ b/combination.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7e34b704",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'What this does:\\n- Loads train.csv (labels + prompt for GroupKFold) and test.csv\\n- Loads per-model OOF train probs and test probs (any subset present)\\n  Expected columns in each predictions file: id, pA, pB, pTie  (probabilities)\\n- Rigorously validates inputs (alignment, ranges, sums, NaNs, class order)\\n- Builds a meta-dataset (concatenate per-model probs + engineered margins/entropy/lengths)\\n- Runs GroupKFold(by prompt) CV with two strategies:\\n    1) Constrained non-negative, sum-to-1 **logit-space** weighted average\\n    2) Multinomial Logistic Regression (stacking) on features\\n  Chooses the strategy with lower mean CV log-loss\\n- Refit on full train, predict test, and write:\\n    runs/<tag>/submission.csv  (id,winner_model_a,winner_model_b,winner_tie)\\n    runs/<tag>/oof_combined.csv\\n    runs/<tag>/cv_report.json\\n    runs/<tag>/blend_config.json\\n- Includes symmetry unit-tests (swap A/B) and tie calibration checks\\n- Gracefully degrades if some model files are missing'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"What this does:\n",
     "- Loads train.csv (labels + prompt for GroupKFold) and test.csv\n",
@@ -28,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "696ca69b",
    "metadata": {},
    "outputs": [],
@@ -48,10 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6ab7fdb7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\aryad\\AppData\\Local\\Temp\\ipykernel_38608\\2499587871.py:2: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -73,14 +99,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "832eab56",
-   "metadata": {},
-   "source": [
-    "----------------------------"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b773ff45",
@@ -92,20 +110,20 @@
     "    \"train_csv\": \"./data/train.csv\",    # <-- update if different\n",
     "    \"test_csv\":  \"./data/test.csv\",     # <-- update if different\n",
     "\n",
-    "    # Model artifacts to blend (add/remove freely).\n",
+    "    # Model artifacts to blend (add/remove freely)\n",
     "    # Each item can point to train OOF probs and test probs. If missing, it's skipped.\n",
     "    # File format (CSV): id,pA,pB,pTie (probabilities for A/B/Tie)\n",
     "    \"model_specs\": [\n",
     "        {\n",
-    "            \"name\": \"teacher2_reward\",  # LoRA + RoBERTa reward model\n",
+    "            \"name\": \"teacher2_reward\",   # LoRA + RoBERTa reward model\n",
     "            \"train_path\": \"./reward_teacher_outputs/teacher_logits_train.csv\",\n",
     "            \"test_path\":  \"./reward_teacher_outputs/teacher_logits_test.csv\",\n",
     "        },\n",
-    "        {\n",
-    "            \"name\": \"deberta_head_only\",  # deberta submission model\n",
-    "            \"train_path\": \"./data/train.csv\",\n",
-    "            \"test_path\":  \"./submission_deberta_head_only.csv\",\n",
-    "        },\n",
+    "        #{\n",
+    "            #\"name\": \"deberta_head_only\",  # DeBERTa submission model\n",
+    "            #\"train_path\": \"./data/train.csv\",\n",
+    "            #\"test_path\":  \"./submission_deberta_head_only.csv\",\n",
+    "        #},\n",
     "    ],\n",
     "\n",
     "    # Where to save all outputs\n",
@@ -140,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ecda30f8",
    "metadata": {
     "lines_to_next_cell": 1
@@ -161,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f5879bcd",
    "metadata": {},
    "outputs": [],
@@ -171,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7737d12b",
    "metadata": {
     "lines_to_next_cell": 1
@@ -189,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "23032195",
    "metadata": {
     "lines_to_next_cell": 1
@@ -210,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "969a2edc",
    "metadata": {
     "lines_to_next_cell": 1
@@ -223,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a045cdd3",
    "metadata": {
     "lines_to_next_cell": 1
@@ -251,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "19dac0df",
    "metadata": {
     "lines_to_next_cell": 1
@@ -269,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "69342130",
    "metadata": {
     "lines_to_next_cell": 1
@@ -287,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "34733a2e",
    "metadata": {
     "lines_to_next_cell": 1
@@ -301,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "58ee33d3",
    "metadata": {
     "lines_to_next_cell": 1
@@ -315,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "faf445a9",
    "metadata": {
     "lines_to_next_cell": 1
@@ -334,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f88fc4bf",
    "metadata": {},
    "outputs": [],
@@ -345,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "aaf2924b",
    "metadata": {},
    "outputs": [],
@@ -369,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "60d31cd2",
    "metadata": {},
    "outputs": [],
@@ -383,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "671dfe51",
    "metadata": {},
    "outputs": [],
@@ -412,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "eaa95357",
    "metadata": {},
    "outputs": [],
@@ -508,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ee59af1e",
    "metadata": {},
    "outputs": [],
@@ -527,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "c5000c60",
    "metadata": {},
    "outputs": [],
@@ -708,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "587ec62b",
    "metadata": {},
    "outputs": [],
@@ -779,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "afebdb38",
    "metadata": {},
    "outputs": [],
@@ -802,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "51a9fdfa",
    "metadata": {},
    "outputs": [],
@@ -815,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "718c20e3",
    "metadata": {},
    "outputs": [],
@@ -1036,10 +1054,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "ec037b5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20:36:25] INFO - Run dir: ./runs\\20251106_203625\n",
+      "[20:36:25] INFO - Loading official train/test...\n",
+      "[20:36:27] INFO - Loading model artifacts...\n",
+      "[20:36:27] WARNING - [teacher2_reward] OOF train file not found -> skipping train for this model.\n",
+      "[20:36:27] WARNING - [teacher2_reward] test file not found -> skipping test for this model.\n",
+      "[20:36:27] WARNING - Skipping model 'teacher2_reward' (no files found).\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "No model predictions found. Add at least one to CONFIG['model_specs'].",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[27]\u001b[39m\u001b[32m, line 44\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     41\u001b[39m         logging.warning(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSkipping model \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mspec[\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m (no files found).\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     43\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(preds_list) == \u001b[32m0\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m44\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mNo model predictions found. Add at least one to CONFIG[\u001b[39m\u001b[33m'\u001b[39m\u001b[33mmodel_specs\u001b[39m\u001b[33m'\u001b[39m\u001b[33m].\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     46\u001b[39m \u001b[38;5;66;03m# Build features\u001b[39;00m\n\u001b[32m     47\u001b[39m logging.info(\u001b[33m\"\u001b[39m\u001b[33mBuilding meta features...\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mRuntimeError\u001b[39m: No model predictions found. Add at least one to CONFIG['model_specs']."
+     ]
+    }
+   ],
    "source": [
     "main()"
    ]
@@ -1050,10 +1093,25 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 5
 }
-
-
